; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_cubetexture_create.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_cubetexture_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* (i32, i32, i32, i32, i32**, i32)* }

@thread_graphics = common dso_local global %struct.TYPE_5__* null, align 8
@GS_BUILD_MIPMAPS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"gs_cubetexture_create\00", align 1
@LOG_WARNING = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [89 x i8] c"Cannot use mipmaps with a non-power-of-two texture.  Disabling mipmaps for this texture.\00", align 1
@GS_RENDER_TARGET = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [77 x i8] c"Cannot use mipmaps with render targets.  Disabling mipmaps for this texture.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @gs_cubetexture_create(i32 %0, i32 %1, i32 %2, i32** %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32**, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_5__*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32** %3, i32*** %10, align 8
  store i32 %4, i32* %11, align 4
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** @thread_graphics, align 8
  store %struct.TYPE_5__* %15, %struct.TYPE_5__** %12, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @is_pow2(i32 %16)
  store i32 %17, i32* %13, align 4
  %18 = load i32, i32* %11, align 4
  %19 = load i32, i32* @GS_BUILD_MIPMAPS, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %5
  %23 = load i32, i32* %9, align 4
  %24 = icmp ne i32 %23, 1
  br label %25

25:                                               ; preds = %22, %5
  %26 = phi i1 [ true, %5 ], [ %24, %22 ]
  %27 = zext i1 %26 to i32
  store i32 %27, i32* %14, align 4
  %28 = call i32 @gs_valid(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %31, label %30

30:                                               ; preds = %25
  store i32* null, i32** %6, align 8
  br label %73

31:                                               ; preds = %25
  %32 = load i32, i32* %14, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %44

34:                                               ; preds = %31
  %35 = load i32, i32* %13, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %44, label %37

37:                                               ; preds = %34
  %38 = load i32, i32* @LOG_WARNING, align 4
  %39 = call i32 @blog(i32 %38, i8* getelementptr inbounds ([89 x i8], [89 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %14, align 4
  %40 = load i32, i32* @GS_BUILD_MIPMAPS, align 4
  %41 = xor i32 %40, -1
  %42 = load i32, i32* %11, align 4
  %43 = and i32 %42, %41
  store i32 %43, i32* %11, align 4
  store i32 1, i32* %9, align 4
  br label %44

44:                                               ; preds = %37, %34, %31
  %45 = load i32, i32* %14, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %59

47:                                               ; preds = %44
  %48 = load i32, i32* %11, align 4
  %49 = load i32, i32* @GS_RENDER_TARGET, align 4
  %50 = and i32 %48, %49
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %59

52:                                               ; preds = %47
  %53 = load i32, i32* @LOG_WARNING, align 4
  %54 = call i32 @blog(i32 %53, i8* getelementptr inbounds ([77 x i8], [77 x i8]* @.str.2, i64 0, i64 0))
  %55 = load i32, i32* @GS_BUILD_MIPMAPS, align 4
  %56 = xor i32 %55, -1
  %57 = load i32, i32* %11, align 4
  %58 = and i32 %57, %56
  store i32 %58, i32* %11, align 4
  store i32 1, i32* %9, align 4
  store i32** null, i32*** %10, align 8
  br label %59

59:                                               ; preds = %52, %47, %44
  %60 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %61 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %60, i32 0, i32 1
  %62 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %61, i32 0, i32 0
  %63 = load i32* (i32, i32, i32, i32, i32**, i32)*, i32* (i32, i32, i32, i32, i32**, i32)** %62, align 8
  %64 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %65 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %64, i32 0, i32 0
  %66 = load i32, i32* %65, align 8
  %67 = load i32, i32* %7, align 4
  %68 = load i32, i32* %8, align 4
  %69 = load i32, i32* %9, align 4
  %70 = load i32**, i32*** %10, align 8
  %71 = load i32, i32* %11, align 4
  %72 = call i32* %63(i32 %66, i32 %67, i32 %68, i32 %69, i32** %70, i32 %71)
  store i32* %72, i32** %6, align 8
  br label %73

73:                                               ; preds = %59, %30
  %74 = load i32*, i32** %6, align 8
  ret i32* %74
}

declare dso_local i32 @is_pow2(i32) #1

declare dso_local i32 @gs_valid(i8*) #1

declare dso_local i32 @blog(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
